# mad-edge

./: .dockerignore  .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  compose.example.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: commit-planner.md  spec-author.md  test-author.md  test-critic.md  write-test.md
.claude/commands/: commit.md  new-spec.md
.claude/skills/intake/: SKILL.md
.claude/skills/intake/resources/templates/: bug.md  feat.md  refactor.md
.claude/skills/mad/: SKILL.md
.claude/skills/mad/evals/: evals.json
.claude/skills/work/: SKILL.md
.claude/skills/write-test/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: ai-develop-on-issue.yml  release.yml  test.yml  testpypi-preview.yml
dockerfiles/: Dockerfile.alpine  Dockerfile.debian  Dockerfile.ubuntu
docs/: .docs-manifest.yaml  cloudflare-tunnel.md  events-architecture.md  testing-heuristics.md  testpypi-preview.md
docs/01-overview/: context.md  domain.md  operations.md  passport.md  scope.md
docs/02-architecture/: components.md  data-model.md  source-tree.md  test-tree.md
docs/03-contracts/: api.md  events-published.md  external-dependencies.md  jobs.md
docs/04-conventions/: api-design.md
docs/05-operations/: configuration.md  deployment.md  local-dev.md
docs/05-operations/runbooks/: README.md  claude-code-mcp.md  docker.md  sandbox-bwrap.md  testpypi-preview.md
docs/06-flow-participation/: README.md
docs/09-history/: changelog.md
docs/10-user-manuals/: getting-started.md
docs/adr/: 0003-package-layout.md  0004-events-module-vocabulary-and-scope.md  0005-uuidv7-event-id.md  0006-multi-tenancy-deferred.md  0007-single-write-gateway-event-emitter.md  0008-internal-hook-adapter-and-vocabulary.md  0009-orchestration-module.md  README.md
scripts/: build-all.sh  setup-token.sh  spawn.sh
specs/claude-cli/: README.md  design.md  plan.md  requirements.md
specs/infra/: README.md  api.md  design.md  plan.md  requirements.md
src/mad/adapters/inbound/http/: app.py  asgi.py  dependencies.py
src/mad/adapters/inbound/internal/: app.py  hooks_router.py
src/mad/adapters/inbound/mcp/: server.py
src/mad/adapters/outbound/agents/: claude_cli.py  factory.py  fake.py  hook_socket.py  model_catalog.py  opencode.py
src/mad/adapters/outbound/events/: in_memory_event_bus.py  jsonl_event_log_query.py
src/mad/adapters/outbound/orchestration/: projection.py  system_clock.py  workflow_projection.py
src/mad/adapters/outbound/persistence/: jsonl_session_repository.py  local_workspace_provisioner.py
src/mad/api/: app.py
src/mad/api/routes/: sessions.py
src/mad/core/: exceptions.py  security.py  sessions.py
src/mad/core/config/: __init__.py  settings.py
src/mad/core/config/use_cases/: get_config.py
src/mad/core/domain/: __init__.py
src/mad/core/domain/entities/: __init__.py  session.py
src/mad/core/domain/exceptions/: __init__.py
src/mad/core/domain/value_objects/: mount_path.py
src/mad/core/events/: emitter.py
src/mad/core/events/domain/: event.py  event_id.py
src/mad/core/events/ports/: __init__.py  event_bus.py  event_log_query.py  event_store.py
src/mad/core/events/use_cases/: query_events.py  stream_events.py
src/mad/core/orchestration/domain/: auto_sync_config.py  dispatch_policy.py  model_config.py  ordering.py  task.py  timeout_config.py  workflow.py
src/mad/core/orchestration/ports/: clock.py  task_projection.py  task_queue.py  (+1 more)
src/mad/core/ports/: __init__.py
src/mad/core/sessions/: __init__.py  store.py
src/mad/core/use_cases/: __init__.py
src/mad/entry_points/: cli.py
src/mad/providers/: __init__.py  anthropic_api.py  base.py  claude_cli.py  factory.py  fake.py
templates/.components/: changes.md.j2
tests/: conftest.py  test_acceptance.py  test_security.py
tests/e2e/: README.md
tests/helpers/: docker.bash  setup.bash
tests/integration/: build.bats  environment.bats  onboarding.bats  project_mount.bats  volumes.bats
tests/integration/adapters/events/: test_in_memory_event_bus.py  test_jsonl_event_log_query.py
tests/integration/adapters/orchestration/: test_projection.py
tests/integration/adapters/providers/: test_claude_cli_hook_env.py  test_claude_cli_provider.py
tests/integration/api/: test_auto_sync_http.py  test_config_http.py  test_conversation_id.py  test_dispatch_policy_http.py  test_events_http.py  test_http_mcp_parity.py  test_internal_hooks.py  test_mcp_http.py  test_native_tool_use.py  test_orchestration_http.py  test_post_run_auto_sync.py  test_priority_http.py  test_queue_http.py  test_security.py  test_sessions_cleanup_http.py  test_sessions_http.py  test_sessions_timeout_http.py  test_sessions_working_directory.py  test_workflows_http.py
tests/integration/cli/: test_serve_entrypoint.py
tests/integration/orchestration/: test_conversation_id.py  test_dispatcher.py  test_dispatcher_dst.py  test_rate_limit_retry.py  test_startup_rehydration.py  test_workflow_coordinator.py
tests/integration/packaging/: test_sdist_completeness.py
tests/integration/persistence/: test_event_id_injection.py  test_jsonl_security.py  test_log_retention_startup.py  test_session_recovery.py  test_workspace_hooks.py
tests/support/: clock.py  events.py  launchers.py  orchestration.py  sessions.py
tests/unit/: build_all.bats  setup_token.bats  spawn_args.bats
tests/unit/adapters/agents/: test_hook_socket.py
tests/unit/adapters/persistence/: test_log_retention.py  test_sessions_dir.py
tests/unit/adapters/providers/: test_claude_cli_provider.py
tests/unit/core/: test_no_framework_imports.py
tests/unit/core/config/: test_settings.py
tests/unit/core/domain/: test_mount_path.py  test_security.py
tests/unit/core/events/: test_emitter.py
tests/unit/core/sessions/: test_store.py
tests/unit/core/use_cases/: test_create_session.py  test_delete_session.py
tests/unit/orchestration/: test_resolve_effective_model.py
tests/unit/providers/: test_claude_cli.py
(+82 files in other folders)
