[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mad-bros"
version = "0.3.0"
description = "Multi Agent Develop — self-hosted autonomous Claude sessions against GitHub repos."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Jose Salamanca", email = "jose.salamancacoy@gmail.com" },
  { name = "Cristian Moreno", email = "cristianfmoreno95@gmail.com" },
]
requires-python = ">=3.11"
keywords = ["claude", "agents", "automation", "github"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Framework :: FastAPI",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "anthropic>=0.39",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "pytest-timeout>=2.3",
  "import-linter>=2.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "pip-audit>=2.7",
  "pre-commit>=3.7",
  "build>=1.2",
  "twine>=5.1",
  "python-semantic-release>=9.8",
]

[project.scripts]
mad = "mad.entry_points.cli:main"

[project.urls]
Homepage = "https://github.com/jlsaco/mad"
Issues = "https://github.com/jlsaco/mad/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mad"]

[tool.hatch.build.targets.sdist]
include = [
  "src/mad",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "pyproject.toml",
]
exclude = [
  "venv",
  ".venv",
  "sessions",
  "tests/fixtures/tmp",
  "**/__pycache__",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Hard cap on per-test wall time. Any test exceeding this fails instead of
# hanging the suite. SSE / polling / subprocess tests MUST stay under this
# budget; if a test legitimately needs more, override per-test with
# @pytest.mark.timeout(N), never globally.
timeout = 15
timeout_method = "thread"
addopts = "-ra"
pythonpath = ["src", "tests"]
markers = [
  "smoke: hard-rule invariants that must stay green across migration phases",
]
# Treat DeprecationWarnings from our own code as errors so deprecations are
# fixed instead of accumulating; tolerate third-party deprecations until we
# choose to upgrade.
filterwarnings = [
  "error::DeprecationWarning:mad.*",
  "ignore::DeprecationWarning",
]

# Coverage policy — see .claude/memories/testing-heuristic.md
# - `make test-unit` enforces ≥ 95% on src/mad/core/ only.
# - `make test` enforces ≥ 92% on src/mad/ (unit + integration combined).
# Coverage flags are passed via the Makefile, not addopts, so plain `pytest`
# stays cheap and the thresholds are explicit per target.

# ---------------------------------------------------------------------------
# ruff — formatter + linter (replaces black, isort, flake8, bandit-lite, etc.)
# Rule selection is deliberate: see .claude/memories/testing-heuristic.md.
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
extend-exclude = ["sessions", "venv", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle / pyflakes
  "I",             # isort
  "UP",            # pyupgrade (3.11+ syntax)
  "B",             # bugbear (mutable defaults, except blocks, …)
  "SIM",           # simplifications
  "RUF",           # ruff-specific
  "ASYNC",         # asyncio bug patterns
  "S",             # bandit security subset (matters here — we run subprocess)
]
ignore = [
  # bandit S101: asserts in tests are intentional
  "S101",
  # bandit S603: subprocess.run with arg list is the safe form we use
  "S603",
  # bandit S607: partial path is fine for `git`, `claude` lookups via PATH
  "S607",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "S",       # security checks irrelevant in tests
  "B011",    # asserts ok
  "E501",    # line length: tests often inline JSON payloads/URLs
  "F841",    # unused locals: occasional `_ = uc.execute(...)` for clarity
  "RUF059",  # unused unpack vars: tuple destructuring in test fixtures
  "ASYNC110", # polling test state with `while ...: await asyncio.sleep` is fine in tests
]

[tool.ruff.lint.isort]
known-first-party = ["mad"]

# ---------------------------------------------------------------------------
# mypy — strict on the framework-free core; relaxed elsewhere.
# Adapters and HTTP wrap stdlib/FastAPI dynamic surfaces; --strict there
# produces noise that hides real bugs in the domain.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
files = ["src/mad/core"]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
strict = true

# Adapters and HTTP wrap framework dynamic surfaces — type checking there
# produces noise that hides real bugs in the domain. Mypy is enforced on
# `mad.core` only; adapters lean on tests + import-linter for safety.

[tool.coverage.run]
branch = true
source = ["mad"]
omit = [
  # Thin uvicorn launcher; only exercised by `mad serve` / `make serve`,
  # not by the test suite. Excluded so it does not drag down the
  # full-suite coverage threshold.
  "src/mad/entry_points/cli.py",
]

[tool.coverage.report]
exclude_also = [
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "\\.\\.\\.",
  "pragma: no cover",
]
show_missing = true
skip_covered = false

# Architectural guard — see CLAUDE.md hard rule 4.
# `mad.core` is framework-free: it must not import FastAPI, adapters, or any
# I/O-heavy stdlib that would betray the hexagonal boundary. Run with
# `make lint` (wraps `lint-imports`).
[tool.importlinter]
root_package = "mad"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "mad.core is framework-free and adapter-free"
type = "forbidden"
source_modules = ["mad.core"]
forbidden_modules = [
  "fastapi",
  "mad.adapters",
  "mad.api",
  "mad.providers",
  "subprocess",
  "shutil",
  "httpx",
  "boto3",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/mad/__init__.py:__version__"]
branch = "main"
upload_to_vcs_release = true
build_command = "python -m pip install build && python -m build"
commit_message = "chore(release): {version}\n\nCo-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>"
commit_parser = "conventional"
major_on_zero = false
tag_format = "v{version}"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
